CalculateWalletStats() basic function Change bitinfochrts to use -full Exclude March 12/13

--- a/BTCBacktester/BTCBacktester.csproj
+++ b/BTCBacktester/BTCBacktester.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransactionStats.cs" />
+    <Compile Include="WalletStats.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
